fix search is overflowing screen on small screens

--- a/app/styles/sections/_header.scss
+++ b/app/styles/sections/_header.scss
@@ -5,6 +5,9 @@
   &__search {
     display: none;
 
+    // ugly fix - flexbox is calculating wrong width and button is overflowing
+    max-width: calc(100% - 45px);
+
     .form-control {
       width: 100%;
     }
